src/graphics/lib/compute/spinel-rs/src/spinel_sys.rs


    pub unsafe extern "C" fn spn_path_move_to(
        builder: SpnPathBuilder,
        x: f32,
        y: f32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_path_line_to(
        builder: SpnPathBuilder,
        x: f32,
        y: f32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_path_quad_to(
        builder: SpnPathBuilder,
        x1: f32,
        y1: f32,
        x2: f32,
        y2: f32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_path_quad_smooth_to(
        builder: SpnPathBuilder,
        x2: f32,
        y2: f32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_path_cubic_to(
        builder: SpnPathBuilder,
        x1: f32,
        y1: f32,
        x2: f32,
        y2: f32,
        x3: f32,
        y3: f32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_path_cubic_smooth_to(
        builder: SpnPathBuilder,
        x2: f32,
        y2: f32,
        x3: f32,
        y3: f32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_path_rat_quad_to(
        builder: SpnPathBuilder,
        x1: f32,
        y1: f32,
        x2: f32,
        y2: f32,
        w0: f32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_path_rat_cubic_to(
        builder: SpnPathBuilder,
        x1: f32,
        y1: f32,
        x2: f32,
        y2: f32,
        x3: f32,
        y3: f32,
        w0: f32,
        w1: f32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }

    pub unsafe extern "C" fn spn_path_ellipse(
        builder: SpnPathBuilder,
        cx: f32,
        cy: f32,
        rx: f32,
        ry: f32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }

    pub unsafe extern "C" fn spn_raster_builder_create(
        context: SpnContext,
        builder: *mut SpnRasterBuilder,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_raster_builder_retain(builder: SpnRasterBuilder) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_raster_builder_release(builder: SpnRasterBuilder) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_raster_builder_flush(builder: SpnRasterBuilder) -> SpnResult {
        SpnResult::SpnSuccess
    }

    pub unsafe extern "C" fn spn_raster_begin(builder: SpnRasterBuilder) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_raster_end(
        builder: SpnRasterBuilder,
        raster: *mut SpnRaster,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_raster_release(
        context: SpnContext,
        rasters: *const SpnRaster,
        count: u32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_raster_retain(
        context: SpnContext,
        rasters: *const SpnRaster,
        count: u32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }

    pub unsafe extern "C" fn spn_raster_fill(
        raster_builder: SpnRasterBuilder,
        paths: *const SpnPath,
        _transform_weakrefs: *const u8,
        transforms: *const *const f32,
        _clip_weakrefs: *const u8,
        clips: *const *const f32,
        count: u32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }

    pub unsafe extern "C" fn spn_composition_create(
        context: SpnContext,
        composition: *mut SpnStyling,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_composition_clone(
        context: SpnContext,
        composition: SpnStyling,
        clone: *mut SpnStyling,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_composition_retain(composition: SpnStyling) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_composition_release(composition: SpnStyling) -> SpnResult {
        SpnResult::SpnSuccess
    }

    pub unsafe extern "C" fn spn_composition_place(
        composition: SpnStyling,
        rasters: *const SpnRaster,
        layer_ids: *const u32,
        txtys: *const [i32; 2],
        count: u32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_composition_seal(composition: SpnStyling) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_composition_unseal(composition: SpnStyling) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_composition_reset(composition: SpnStyling) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_composition_get_bounds(
        composition: SpnStyling,
        bounds: *const [i32; 4],
    ) {
    }

    pub unsafe extern "C" fn spn_styling_create(
        context: SpnContext,
        styling: *mut SpnStyling,
        dwords_count: u32,
        layers_count: u32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_styling_retain(styling: SpnStyling) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_styling_release(styling: SpnStyling) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_styling_seal(styling: SpnStyling) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_styling_unseal(styling: SpnStyling) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_styling_reset(styling: SpnStyling) -> SpnResult {
        SpnResult::SpnSuccess
    }

    pub unsafe extern "C" fn spn_styling_group_alloc(
        styling: SpnStyling,
        group_id: *mut SpnGroupId,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_styling_group_enter(
        styling: SpnStyling,
        group_id: SpnGroupId,
        n: u32,
        cmds: *mut *mut u32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_styling_group_leave(
        styling: SpnStyling,
        group_id: SpnGroupId,
        n: u32,
        cmds: *mut *mut u32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }

    pub unsafe extern "C" fn spn_styling_group_parents(
        styling: SpnStyling,
        group_id: SpnGroupId,
        n: u32,
        parents: *mut *mut SpnGroupId,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_styling_group_range_lo(
        styling: SpnStyling,
        group_id: SpnGroupId,
        layer_lo: u32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_styling_group_range_hi(
        styling: SpnStyling,
        group_id: SpnGroupId,
        layer_hi: u32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
    pub unsafe extern "C" fn spn_styling_group_layer(
        styling: SpnStyling,
        group_id: SpnGroupId,
        layer_id: u32,
        n: u32,
        cmds: *mut *mut u32,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }

    pub unsafe extern "C" fn spn_styling_layer_fill_rgba_encoder(
        cmds: *mut u32,
        rgba: *const [f32; 4],
    ) {
    }
    pub unsafe extern "C" fn spn_styling_background_over_encoder(
        cmds: *mut u32,
        rgba: *const [f32; 4],
    ) {
    }

    pub unsafe extern "C" fn spn_render(
        context: SpnContext,
        spn_render_submit: *const SpnRenderSubmit,
    ) -> SpnResult {
        SpnResult::SpnSuccess
    }
}

#[cfg(feature = "spinel-null")]
pub use spinel_null::*;

#[cfg(test)]
mod tests {
    use super::*;

    #[test]
    fn spinel_null() {
        let context: SpnContext = SpnContext::default();

        unsafe {
            spn_context_release(context).res().unwrap();
        }
    }
}
